tests/src/frontend/syntax/invalid/one_element_tuple.sk
fun main(): String {
  tuple = ("a", "b", "c");
  (x) = tuple;
}
